modules/parsers/parser-hdbschema/com.sap.xsk.parser.hdbschema/src/main/antlr4/com/sap/xsk/parser/hdbschema/core/Hdbschema.g4
grammar Hdbschema;

hdbschemaDefinition: property+;
property: schemaProp;

schemaProp: 'schema' EQ STRING SEMICOLON;

STRING:  '"' (ESC|.)*? '"';
EQ : '=' ;
SEMICOLON : ';' ;
COMMA : ',' ;
WS  :   [ \t\r\n\u000C]+ -> skip;   // toss out whitespace
ESC : '\\"' | '\\\\';   // 2-char sequences \" and \\
